catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: cf-workloads
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    cloudfoundry.org/app_guid: da51dae4-0267-420e-9ccf-17ca1db39d1a
    cloudfoundry.org/process_type: web
  sessionAffinity: None
  type: ClusterIP
